<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/Quiz_design"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/Q1" />

            <EditText
                android:id="@+id/userans1"
                android:layout_width="match_parent"
                android:inputType=""
                android:layout_height="wrap_content"
                android:hint="@string/anshere" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/Quiz_design"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/Q2" />

            <CheckBox
                android:id="@+id/a2op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A2op1" />

            <CheckBox
                android:id="@+id/a2op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A2op2" />

            <CheckBox
                android:id="@+id/a2op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A2op3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                style="@style/Quiz_design"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/TorF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <RadioButton
                android:id="@+id/Q3T"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="true"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/Q3F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="False"
                android:textSize="18sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/Quiz_design"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4" />

            <EditText
                android:id="@+id/userans2"
                android:layout_width="match_parent" android:inputType=""
                android:layout_height="wrap_content"
                android:hint="@string/anshere" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Scorecal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Get Score!" />

        <TextView
            android:id="@+id/Score"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Press the button above to get score  "
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="5dp"/>
    </LinearLayout>


</ScrollView>